[project]
name = "ha_carrier"
requires-python = ">=3.14"
dynamic = ["version"]

[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["custom_components*"]
namespaces = true

[tool.setuptools.package-data]
"custom_components.ha_carrier" = ["*.json", "translations/*.json"]

[tool.setuptools.dynamic]
version = { attr = "custom_components.ha_carrier.const.VERSION" }

[dependency-groups]
dev = [
    "carrier-api==2.11.2",
    "homeassistant",
    "mypy",
    "prek",
    "ruff",
]

[tool.mypy]
python_version = "3.14"
files = ["custom_components/ha_carrier"]
check_untyped_defs = true
explicit_package_bases = true
namespace_packages = true
pretty = true
show_error_codes = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["carrier_api.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
indent-width = 4
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "B007", # Loop control variable {name} not used within loop body
    "B014", # Exception handler with duplicate exception
    "C", # complexity
    "E", # pycodestyle
    "F", # pyflakes/autoflake
    "I", # isort
    "ICN001", # import conventions; {name} should be imported as {asname}
    "PGH004", # Use specific rule codes when using noqa
    "PLC0414", # Useless import alias. Import alias does not rename original package.
    "RUF006", # Store a reference to the return value of asyncio.create_task
    "SIM105", # Use contextlib.suppress({exception}) instead of try-except-pass
    "SIM117", # Merge with-statements that use the same scope
    "SIM118", # Use {key} in {dict} instead of {key} in {dict}.keys()
    "SIM201", # Use {left} != {right} instead of not {left} == {right}
    "SIM212", # Use {a} if {a} else {b} instead of {b} if not {a} else {a}
    "SIM300", # Yoda conditions. Use 'age == 42' instead of '42 == age'.
    "SIM401", # Use get from dict with default instead of an if block
    "T20", # flake8-print
    "TRY004", # Prefer TypeError exception for invalid type
    "UP", # pyupgrade
    "W", # pycodestyle
]
ignore = [
    "D", # docstrings
    "D202", # No blank lines allowed after function docstring
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "D404", # First word of the docstring should not be This
    "D406", # Section name should end with a newline
    "D407", # Section name underlining
    "D411", # Missing blank line before section
    "E501", # line too long
    "E731", # do not assign a lambda expression, use a def
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-third-party = ["carrier_api", "homeassistant"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.codespell]
ignore-words-list = "hass"
